hphp/test/slow/enum_supertyping/bad_does_not_exist.php.expectf
Fatal error: Undefined enum: E in %s/bad_does_not_exist.php on line 4
